force-app/main/default/objects/LOPA_Hard_Code__mdt/LOPA_Hard_Code__mdt.object-meta.xml
<CustomObject>
    <label>LOPA Add-On</label>
    <pluralLabel>LOPA Add-On</pluralLabel>
</CustomObject>