force-app/main/default/objects/LOPA_Hard_Code__mdt/fields/Cabin_Type__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Type__c</fullName>
    <label>Cabin Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Deck</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Upper Deck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>