force-app/main/default/objects/LOPA_Hard_Code__mdt/fields/Cabin_Version__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Version__c</fullName>
    <label>Cabin Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>