force-app/main/default/objects/LOPA_Hard_Code__mdt/fields/col__c.field-meta.xml
<CustomField>
    <fullName>col__c</fullName>
    <label>Column Index</label>
    <length>40</length>
    <type>Text</type>
</CustomField>