force-app/main/default/objects/LOPA_Hard_Code__mdt/fields/colL__c.field-meta.xml
<CustomField>
    <fullName>colL__c</fullName>
    <label>Column Label</label>
    <length>30</length>
    <type>Text</type>
</CustomField>