force-app/main/default/objects/LOPA_Hard_Code__mdt/fields/lopaId__c.field-meta.xml
<CustomField>
    <fullName>lopaId__c</fullName>
    <label>LopaId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>