force-app/main/default/objects/LOPA_Hard_Code__mdt/fields/maxCol__c.field-meta.xml
<CustomField>
    <fullName>maxCol__c</fullName>
    <description>The maximum possible column in that zone</description>
    <label>Max Column</label>
    <length>10</length>
    <type>Text</type>
</CustomField>