force-app/main/default/objects/LOPA_Hard_Code__mdt/fields/pos__c.field-meta.xml
<CustomField>
    <fullName>pos__c</fullName>
    <description>The Label of that Position</description>
    <label>Position</label>
    <length>40</length>
    <type>Text</type>
</CustomField>