force-app/main/default/objects/LOPA_Hard_Code__mdt/fields/posId__c.field-meta.xml
<CustomField>
    <fullName>posId__c</fullName>
    <description>The unique identifier of this position</description>
    <label>PositionId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>