force-app/main/default/objects/LOPA_Hard_Code__mdt/fields/Position_Type__c.field-meta.xml
<CustomField>
    <fullName>Position_Type__c</fullName>
    <label>Position Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GF</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>GN</fullName>
            </value>
            <value>
                <fullName>GR</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
            <value>
                <fullName>LAF</fullName>
            </value>
            <value>
                <fullName>LAR</fullName>
            </value>
            <value>
                <fullName>seat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>