force-app/main/default/objects/LOPA_Hard_Code__mdt/fields/Remove__c.field-meta.xml
<CustomField>
    <fullName>Remove__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove</label>
    <type>Checkbox</type>
</CustomField>