force-app/main/default/objects/LOPA_Hard_Code__mdt/fields/row__c.field-meta.xml
<CustomField>
    <fullName>row__c</fullName>
    <description>The index of row programmatically</description>
    <label>Row Index</label>
    <length>10</length>
    <type>Text</type>
</CustomField>