force-app/main/default/objects/LOPA_Hard_Code__mdt/fields/rowL__c.field-meta.xml
<CustomField>
    <fullName>rowL__c</fullName>
    <description>Row Label according to their actual rows such as 43, 55, 60</description>
    <label>Row Label</label>
    <length>10</length>
    <type>Text</type>
</CustomField>