force-app/main/default/objects/LOPA_Hard_Code__mdt/fields/width__c.field-meta.xml
<CustomField>
    <fullName>width__c</fullName>
    <label>Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>